[project]
name = "pytmdb"
version = "0.1.0"
description = "A modern Python wrapper for The Movie Database (TMDb) API v3"
authors = [
    {name = "Izak", email = "frdev.izak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
